--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,59 @@
-.calculator {
-    width: 200px;
-    margin: 50px auto;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .keys {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 5px;
-  }
-  
-  button {
-    padding: 10px;
-    font-size: 18px;
+body{
+    margin:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color:hsl(0, 0%, 95%);
+}
+
+#calculator{
+    font-family: Arial, sans-serif;
+    background-color:black;
+    border-radius: 15px;
+    max-width: 500px;
+    overflow: hidden;
+}
+#display{
+    width: 100%;
+    padding: 20px;
+    font-size: 5rem;
+    text-align: left;
     border: none;
+    background-color:hsl(0, 0%, 20%);
+    color: white;
+}
+#keys{
+    display: grid;
+    grid-template-columns:repeat(4, 1fr) ;
+    gap:10px;
+    padding: 25px;
+}
+button{
+    width:100px;
+    height:100px;
+    border-radius: 50px;
+    border: none;
+    background-color: hsl(0, 0%, 30%);
+    color: white;
+    font-size: 3rem;
+    font-weight: bold ;
     cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: lightgray;
-  }
-  
+}
+button:hover{
+    background-color:hsl(0, 0%, 40%);
+
+}
+button:active{
+    background-color:hsl(0, 0%, 50%);
+
+}
+.operator-btn{
+    background-color: hsl(35, 100%, 55%);
+}
+.operator-btn:hover{
+    background-color: hsl(35, 100%, 65%);
+}
+.operator-btn:active{
+    background-color: hsl(35, 100%, 75%);
+}
